// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Packer Lerna should aggregate any analytics 1`] = `
Object {
  "dependencies": Object {
    "external": Object {
      "debug": "*",
    },
    "internal": Array [
      Object {
        "description": "",
        "name": "@fixture/sub",
        "private": false,
        "version": "0.1.3",
      },
      Object {
        "description": "",
        "name": "@fixture/subsub",
        "private": false,
        "version": "0.1.3",
      },
      Object {
        "description": "",
        "name": "@fixture/subsubsub",
        "private": false,
        "version": "0.1.3",
      },
    ],
    "peer": Object {
      "ansi-styles": "4.0.0",
      "debug": "*",
      "smallest": "1.0.1",
      "supports-color": "7.0.0",
    },
  },
  "graph": Object {
    "@fixture/main": Object {
      "external": Object {
        "ansi-styles": "4.0.0",
        "debug": "*",
        "smallest": "1.0.1",
        "supports-color": "7.0.0",
      },
      "internal": Object {
        "@fixture/subsub": "0.1.3",
        "@fixture/subsubsub": "0.1.3",
      },
    },
    "@fixture/sub": Object {
      "smallest": "1.0.1",
    },
    "@fixture/subsub": Object {
      "debug": "*",
    },
    "@fixture/subsubsub": Object {
      "ansi-styles": "4.0.0",
      "supports-color": "7.0.0",
    },
  },
  "integrity": "b0a11c21c89cd3f3be5b3233a2d78be01ac2b8db7060e73c33d88af17383815a",
}
`;

exports[`Packer Lerna should generate a hash for the packed bundle 1`] = `"054b9ea97c9f3b807703f5dd2ef6cf0d5d617788f6536993f0f307d71b856516"`;

exports[`Packer Lerna should generate a monopacker.analytics.json file 1`] = `
Object {
  "dependencies": Object {
    "external": Object {
      "debug": "*",
    },
    "internal": Array [
      Object {
        "description": "",
        "name": "@fixture/sub",
        "private": false,
        "version": "0.1.3",
      },
      Object {
        "description": "",
        "name": "@fixture/subsub",
        "private": false,
        "version": "0.1.3",
      },
      Object {
        "description": "",
        "name": "@fixture/subsubsub",
        "private": false,
        "version": "0.1.3",
      },
    ],
    "peer": Object {
      "ansi-styles": "4.0.0",
      "debug": "*",
      "smallest": "1.0.1",
      "supports-color": "7.0.0",
    },
  },
  "graph": Object {
    "@fixture/main": Object {
      "external": Object {
        "ansi-styles": "4.0.0",
        "debug": "*",
        "smallest": "1.0.1",
        "supports-color": "7.0.0",
      },
      "internal": Object {
        "@fixture/subsub": "0.1.3",
        "@fixture/subsubsub": "0.1.3",
      },
    },
    "@fixture/sub": Object {
      "smallest": "1.0.1",
    },
    "@fixture/subsub": Object {
      "debug": "*",
    },
    "@fixture/subsubsub": Object {
      "ansi-styles": "4.0.0",
      "supports-color": "7.0.0",
    },
  },
  "integrity": "b0a11c21c89cd3f3be5b3233a2d78be01ac2b8db7060e73c33d88af17383815a",
}
`;

exports[`Packer Lerna should generate a monopacker.analytics.json file 2`] = `
Object {
  "dependencies": Object {
    "external": Object {
      "debug": "*",
    },
    "internal": Array [
      Object {
        "description": "",
        "name": "@fixture/sub",
        "private": false,
        "version": "0.1.3",
      },
      Object {
        "description": "",
        "name": "@fixture/subsub",
        "private": false,
        "version": "0.1.3",
      },
      Object {
        "description": "",
        "name": "@fixture/subsubsub",
        "private": false,
        "version": "0.1.3",
      },
    ],
    "peer": Object {
      "ansi-styles": "4.0.0",
      "debug": "*",
      "smallest": "1.0.1",
      "supports-color": "7.0.0",
    },
  },
  "graph": Object {
    "@fixture/main": Object {
      "external": Object {
        "ansi-styles": "4.0.0",
        "debug": "*",
        "smallest": "1.0.1",
        "supports-color": "7.0.0",
      },
      "internal": Object {
        "@fixture/subsub": "0.1.3",
        "@fixture/subsubsub": "0.1.3",
      },
    },
    "@fixture/sub": Object {
      "smallest": "1.0.1",
    },
    "@fixture/subsub": Object {
      "debug": "*",
    },
    "@fixture/subsubsub": Object {
      "ansi-styles": "4.0.0",
      "supports-color": "7.0.0",
    },
  },
  "integrity": "b0a11c21c89cd3f3be5b3233a2d78be01ac2b8db7060e73c33d88af17383815a",
}
`;

exports[`Packer Lerna should generate an artificial package correctly 1`] = `
Object {
  "dependencies": Object {
    "ansi-styles": "4.0.0",
    "debug": "*",
    "smallest": "1.0.1",
    "supports-color": "7.0.0",
  },
  "description": "",
  "monopacker": Object {
    "hash": "054b9ea97c9f3b807703f5dd2ef6cf0d5d617788f6536993f0f307d71b856516",
    "linked": Object {
      "@fixture/sub": "0.1.3",
      "@fixture/subsub": "0.1.3",
      "@fixture/subsubsub": "0.1.3",
    },
    "version": "0.1.16",
  },
  "name": "@fixture/main-packed",
  "version": "0.2.7",
}
`;

exports[`Packer Lerna should generate correct metadata for the packed bundle 1`] = `
Object {
  "hash": "054b9ea97c9f3b807703f5dd2ef6cf0d5d617788f6536993f0f307d71b856516",
  "linked": Object {
    "@fixture/sub": "0.1.3",
    "@fixture/subsub": "0.1.3",
    "@fixture/subsubsub": "0.1.3",
  },
  "version": "0.1.16",
}
`;
